# area-calc

./: .flake8  .pre-commit-config.yaml  README.md  build.sh  requirements.txt  run.py  setup.cfg  test_runner.sh
.github/workflows/: tests.yml
aesthetic_ascii.egg-info/: PKG-INFO  SOURCES.txt
app/src/: __init__.py  base.py  calculate_area_with_1_inputs.py  calculate_area_with_2_inputs.py
app/test/CA1/: test_CA1.py
app/test/CA2/: test_CA2.py  test_calculate_area_with_two_inputs.py
area_calc.egg-info/: PKG-INFO  SOURCES.txt
