[metadata]
name = area_calc
version = 0.0.1
author = Hashan Nalaka
author_email = t@test.com
description = For calculating area of different geometric shapes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hashnoxt/area-calc
classifiers =
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True